--- a/about.html
+++ b/about.html
@@ -30,13 +30,12 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">Faura Alyriana S</a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">Faura Alyriana</a></h1>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a class="active" href="about.html">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -67,7 +66,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile.png" class="img-fluid" alt="profile" width="80%">
+            <img src="assets/img/me.png" class="img-fluid" alt="profile" width="80%">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <div class="row">
@@ -98,6 +97,39 @@
       </div>
     </section><!-- End About Section -->
 
+    <!-- ======= Education Section ======= -->
+    <section id="resume" class="resume">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Education</h2>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+
+            <div class="resume-item">
+              <h4>Sekolah Tinggi Teknologi Bandung</h4>
+              <h5>September 2021 - Present</h5>
+              <p>Currently, I am studying for a bachelor's degree in Informatics Engineering at this institute/university.</p>
+            </div>
+
+          </div>
+          <div class="col-lg-6">
+            <div class="resume-item">
+              <h4>Lithan EduCLaas Singapore</h4>
+              <h5>September 2022 - Present</h5>
+              <p>Currently, I am enrolled in a Software Engineering bootcamp course with the aim of improving my expertise in this field.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <!-- ======= End Education Section ======= -->
+
+
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills">
       <div class="container" data-aos="fade-up">
@@ -112,21 +144,21 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">A <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
+              <span class="skill">B <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">C <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -137,21 +169,21 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Figma <i class="val">80%</i></span>
+              <span class="skill">D <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Axure <i class="val">90%</i></span>
+              <span class="skill">E <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">MySQL <i class="val">55%</i></span>
+              <span class="skill">F <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
