--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,6 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a class="active" href="contact.html">Contact</a></li>
         </ul>
@@ -46,10 +45,8 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.linkedin.com/in/faura-alyriana-shakira-021b97250/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
 
     </div>
@@ -72,8 +69,8 @@
 
           <div>
             <iframe style="border:0; width: 100%; height: 270px;"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3959.21036679278!2d107.94997171744383!3d-7.101600700000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68b675682e230f%3A0xebc1ab7822085c93!2sJl.%20Cikoang%20Raya%2C%20Sindangsari%2C%20Kec.%20Leuwigoong%2C%20Kabupaten%20Garut%2C%20Jawa%20Barat!5e0!3m2!1sid!2sid!4v1687454679181!5m2!1sid!2sid"
-              frameborder="0" allowfullscreen></iframe>
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.6808828665526!2d107.61178227484525!3d-6.928694367819828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e882127c3d61%3A0xe1ba5e9d3a0c3db4!2sJl.%20Melong%20Kaler%20No.12%2C%20Cikawao%2C%20Kec.%20Lengkong%2C%20Kota%20Bandung%2C%20Jawa%20Barat%2040261!5e0!3m2!1sid!2sid!4v1690474214415!5m2!1sid!2sid"
+              frameborder="0" allowfullscreen></iframe>              
           </div>
 
           <div class="row mt-5">
@@ -82,7 +79,7 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>Sindangsari, Leuwigoong District, Garut Regency, West Java, Indonesia</p>
+                  <p>Jl. Melong Kaler No.12, Cikawao, Kec.Lengkong, Bandung, West Java, Indonesia</p>
                 </div>
 
                 <div class="email">
