--- a/about.html
+++ b/about.html
@@ -10,7 +10,9 @@
   <meta content="" name="keywords">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -36,7 +38,6 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a class="active" href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -44,10 +45,9 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.linkedin.com/in/faura-alyriana-shakira-021b97250/" class="linkedin"><i
+            class="bi bi-linkedin"></i></i></a>
       </div>
 
     </div>
@@ -62,11 +62,17 @@
 
         <div class="section-title">
           <h2>About Me</h2>
+          <p>
+            Welcome to the 'About Me' page! My name is Faura Alyriana Shakira, usually called Faura or Rara. I am a
+            beginner software engineer who is currently pursuing a bachelor's degree in informatics engineering at
+            Sekolah Tinggi Teknologi Bandung and I am currently enrolled also in the Software Engineering bootcamp
+            course at Lithan eduCLaaS with the aim of improving my expertise in this field.
+          </p>
         </div>
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/me.png" class="img-fluid" alt="profile" width="80%">
+            <img src="assets/img/profile.png" class="img-fluid" alt="profile" width="70%">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <div class="row">
@@ -74,23 +80,25 @@
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 4 September 2003</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +6287837659605</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Garut, Indonesia</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Bandung, Indonesia</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 20</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> fauraalyrianas@gmail.com</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
             </div>
             <p>
-              Welcome to the 'About Me' page! My name is Faura Alyriana Shakira, usually called Faura or Rara. I am a beginner software engineer who is currently pursuing a bachelor's degree in informatics engineering at Sekolah Tinggi Teknologi Bandung and I am currently enrolled also in the Software Engineering bootcamp course at Lithan eduCLaaS with the aim of improving my expertise in this field.
+              I have a great interest in UI/UX design and front-end development. In every project, I enjoy the process
+              of creating designs that are aesthetically pleasing and functional, and bring users a pleasant and easy
+              experience. I'm excited to see how design can impact the way people interact with technology, and I'm
+              constantly striving to become a better expert at delivering innovative and compelling designs.
             </p>
-            <!-- <p>
-              I have a great interest and interest in UI/UX design and front-end development. In every project, I enjoy the process of creating designs that are aesthetically pleasing and functional, and bring users a pleasant and easy experience. I'm excited to see how design can impact the way people interact with technology, and I'm constantly striving to become a better expert at delivering innovative and compelling designs.
-            </p> -->
+            <a href="" class="btn-resume">Video Introduction</a>
+            <a href="" class="btn-resume">Resume</a>
+
           </div>
         </div>
 
@@ -103,7 +111,9 @@
 
         <div class="section-title">
           <h2>Education</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
+            in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -112,15 +122,17 @@
             <div class="resume-item">
               <h4>Sekolah Tinggi Teknologi Bandung</h4>
               <h5>September 2021 - Present</h5>
-              <p>Currently, I am studying for a bachelor's degree in Informatics Engineering at this institute/university.</p>
+              <p>Currently, I am studying for a bachelor's degree in Informatics Engineering at this
+                institute/university.</p>
             </div>
 
           </div>
           <div class="col-lg-6">
             <div class="resume-item">
-              <h4>Lithan EduCLaas Singapore</h4>
+              <h4>Lithan EduCLaas </h4>
               <h5>September 2022 - Present</h5>
-              <p>Currently, I am enrolled in a Software Engineering bootcamp course with the aim of improving my expertise in this field.</p>
+              <p>Currently, I am enrolled in a Software Engineering bootcamp course with the aim of improving my
+                expertise in this field.</p>
             </div>
           </div>
         </div>
@@ -136,31 +148,34 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Here are some of the skills I gained during my education</p>
         </div>
 
-        <div class="row skills-content">
+        <!-- <div class="row skills-content">
 
           <div class="col-lg-6">
 
             <div class="progress">
               <span class="skill">A <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">B <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">C <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
@@ -171,28 +186,121 @@
             <div class="progress">
               <span class="skill">D <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">E <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">F <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
           </div>
 
+        </div> -->
+        <!-- <section id="services" class="services">
+          <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+              <h2>Skills</h2>
+              <p>Here are some of the skills I gained during my education</p>
+            </div> -->
+
+        <div class="row justify-content-center">
+          <div class="col-sm-2 mb-3 mb-sm-0">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title text-dark">HTML</h5>
+                <a href="https://id.wikipedia.org/wiki/HTML">
+                  <img src="./assets/img/skills/html.jpg" alt="HTML" width="50%"></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-2 mb-3">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title text-dark">CSS</h5>
+                <a href="https://en.wikipedia.org/wiki/CSS">
+                  <img src="./assets/img/skills/CSS.png" alt="CSS" width="50%"></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-2 mb-3">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title text-dark">JavaScript</h5>
+                <a href="https://id.wikipedia.org/wiki/JavaScript">
+                  <img src="./assets/img/skills/JavaScript.jpg" alt="JavaScript" width="47%">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-2 mb-3">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title text-dark">Bootstrap</h5>
+                <a href="https://getbootstrap.com/">
+                  <img src="./assets/img/skills/bootstrap.png" alt="Bootstrap" width="61%">
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
 
+        <div class="row justify-content-center">
+          <div class="col-sm-2 mb-3">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title text-dark">React</h5>
+                <a href="https://react.dev/">
+                  <img src="./assets/img/skills/react.png" alt="React" width="80%">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-2 mb-3">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title text-dark">Axure</h5>
+                <a href="https://www.axure.com/">
+                  <img src="./assets/img/skills/Axure.png" alt="Axure" width="60%">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-2 mb-3">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title text-dark">Figma</h5>
+                <a href="https://www.figma.com/">
+                  <img src="./assets/img/skills/figma.png" alt="Figma" width="50%">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-2 mb-3">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title text-dark">VS Code</h5>
+                <a href="https://code.visualstudio.com/">
+                  <img src="./assets/img/skills/vsc.jpg" alt="VS Code" width="50%">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section><!-- End Skills Section -->
 
@@ -330,7 +438,8 @@
   <!-- End  Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
