--- a/portfolio-details/portfolio4.html
+++ b/portfolio-details/portfolio4.html
@@ -75,8 +75,7 @@
               <ul>
                 <li><strong>Category</strong>: Web Portal</li>
                 <li><strong>Project date</strong>: 5 May, 2023</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-                <li><strong>Source Code</strong>: <a href="#">www.example.com</a></li>
+                <!-- <li><strong>Source Code</strong>: <a href="#">www.example.com</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
