--- a/portfolio-details/portfolio5.html
+++ b/portfolio-details/portfolio5.html
@@ -75,8 +75,7 @@
               <ul>
                 <li><strong>Category</strong>: Website</li>
                 <li><strong>Project date</strong>: 5 June, 2023</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-                <li><strong>Source Code</strong>: <a href="#">www.example.com</a></li>
+                <!-- <li><strong>Source Code</strong>: <a href="#">www.example.com</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
