--- a/about.html
+++ b/about.html
@@ -72,9 +72,11 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile.png" class="img-fluid" alt="profile" width="70%">
+            <img src="assets/img/profile.png" class="img-fluid" alt="profile">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
+            <h3>Front-end Developer &amp; UI/UX Designer</h3>
+            <br>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -96,8 +98,7 @@
               experience. I'm excited to see how design can impact the way people interact with technology, and I'm
               constantly striving to become a better expert at delivering innovative and compelling designs.
             </p>
-            <a href="" class="btn-resume">Video Introduction</a>
-            <a href="" class="btn-resume">Resume</a>
+            <a href="https://youtu.be/Qw3s7-ktNVc" class="btn-resume">Video Introduction</a>
 
           </div>
         </div>
