--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,9 @@
   <meta content="" name="keywords">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -44,7 +46,8 @@
 
       <div class="header-social-links">
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/faura-alyriana-shakira-021b97250/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.linkedin.com/in/faura-alyriana-shakira-021b97250/" class="linkedin"><i
+            class="bi bi-linkedin"></i></i></a>
       </div>
 
     </div>
@@ -59,7 +62,8 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>On this project page, you will find various projects that I have completed. I hope you enjoy exploring my portfolio</p>
+          <p>On this project page, you will find various projects that I have completed. I hope you enjoy exploring my
+            portfolio</p>
         </div>
 
         <!-- <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -82,7 +86,9 @@
                 <h4>ABC LEARNING CENTER</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="./portfolio-details/portfolio1.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"> View Detail</i></a>
+                  <a href="assets/img/portfolio-detail/MD1.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="ABC Learning Center"><i class="bx bx-plus"></i></a>
+                  <a href="./portfolio-details/details1.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -96,7 +102,9 @@
                 <p>prototype</p>
                 <p></p>
                 <div class="portfolio-links">
-                  <a href="./portfolio-details/portfolio2.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"> View Detail</i></a>
+                  <a href="assets/img/portfolio-detail/M2D1.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="ABC Jobs Prototype"><i class="bx bx-plus"></i></a>
+                  <a href="./portfolio-details/details2.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -109,7 +117,9 @@
                 <h4>ABC Jobs</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="./portfolio-details/portfolio3.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"> View Detail</i></a>
+                  <a href="assets/img/portfolio-detail/M5D1.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="ABC Jobs"><i class="bx bx-plus"></i></a>
+                  <a href="./portfolio-details/details3.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -122,7 +132,9 @@
                 <h4>ABC Cars</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="./portfolio-details/portfolio4.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"> View Detail</i></a>
+                  <a href="assets/img/portfolio-detail/M7D1.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="ABC Cars"><i class="bx bx-plus"></i></a>
+                  <a href="./portfolio-details/details4.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -135,7 +147,9 @@
                 <h4>Know Your Neighborhood</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="./portfolio-details/portfolio5.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"> View Detail</i></a>
+                  <a href="assets/img/portfolio-detail/M8D1.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Know Your Neighborhood"><i class="bx bx-plus"></i></a>
+                  <a href="./portfolio-details/details5.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -215,7 +229,8 @@
   <!-- End  Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
