--- a/about.html
+++ b/about.html
@@ -72,13 +72,13 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile.png" class="img-fluid" alt="profile">
+            <img src="assets/img/profile.png" class="img-fluid" alt="profile" width="100%">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Front-end Developer &amp; UI/UX Designer</h3>
             <br>
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-lg-8">
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 4 September 2003</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +6287837659605</li>
@@ -112,9 +112,9 @@
 
         <div class="section-title">
           <h2>Education</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
             consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+            in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
@@ -130,7 +130,7 @@
           </div>
           <div class="col-lg-6">
             <div class="resume-item">
-              <h4>Lithan EduCLaas </h4>
+              <h4>Lithan EduCLaaS </h4>
               <h5>September 2022 - Present</h5>
               <p>Currently, I am enrolled in a Software Engineering bootcamp course with the aim of improving my
                 expertise in this field.</p>
