--- a/portfolio-details/details3.html
+++ b/portfolio-details/details3.html
@@ -101,7 +101,9 @@
                             <ul>
                                 <li><strong>Category</strong>: Web Community Portal</li>
                                 <li><strong>Project date</strong>: 3 March, 2023</li>
-                                <li><strong>Source Code</strong>: <a href="https://github.com/fauraalyriana/ABCJobs">ABC Jobs</a></li>
+                                <li><strong>Source Code</strong>: <a href="https://github.com/fauraalyriana/ABCJobs">ABC
+                                        Jobs</a></li>
+                                <!-- <li><strong>Project Demo</strong>: <a href="">View demo</a></li> -->
                             </ul>
                         </div>
                         <div class="portfolio-description">
@@ -111,6 +113,25 @@
                                 users to register,
                                 login, update their profile, reset passwords, search for other users and view other
                                 users' profiles.
+                            </p>
+                            <p>
+                                In the follow-up project ABC Jobs community portal, I decided to strengthen the user
+                                experience by using more advanced technology by using Eclipse as my code editor tool.
+                                For the frontend, I chose to use Bootstrap, which is a popular and responsive CSS
+                                framework. With Bootstrap, I can easily design an attractive site look, with a neat
+                                layout and in line with the latest design trends.
+
+                                For the backend, I use Java Spring, a powerful and popular Java framework for web
+                                application development. Java Spring provides a variety of features that support
+                                large-scale and reliable application development. I use Spring Framework to orchestrate
+                                business logic, perform data validation, manage user sessions, and integrate
+                                applications with databases.
+                            </p>
+                            <p>
+                                Using a combination of Bootstrap for the frontend and Java Spring for the backend, I
+                                created the ABC Jobs community portal that is reliable, secure, and accessible to users.
+                                With a focus on quality and performance, I ensure that the website provides a smooth and
+                                satisfying experience for all users.
                             </p>
                         </div>
                     </div>
