--- a/portfolio-details/details4.html
+++ b/portfolio-details/details4.html
@@ -101,7 +101,9 @@
                             <ul>
                                 <li><strong>Category</strong>: Web Portal</li>
                                 <li><strong>Project date</strong>: 5 May, 2023</li>
-                                <li><strong>Source Code</strong>: <a href="https://github.com/fauraalyriana/ABC-Cars">ABC Cars</a></li>
+                                <li><strong>Source Code</strong>: <a
+                                        href="https://github.com/fauraalyriana/ABC-Cars">ABC Cars</a></li>
+                                <!-- <li><strong>Project Demo</strong>: <a href="">View demo</a></li> -->
                             </ul>
                         </div>
                         <div class="portfolio-description">
@@ -113,6 +115,27 @@
                                 Price Range.
                                 Users will be able to view Car information after looking for them. The portal allows
                                 users to log in, post Cars for sale.
+                            </p>
+                            <p>
+                                In developing the ABC Cars portal site, I chose the Spring Tool Suite tool as the editor
+                                to ensure smooth and efficient application development. By using Bootstrap as a
+                                frontend, that can help me easily design an attractive site look, with a neat layout and
+                                in line with the latest design trends.
+
+                                On the registration page, users can easily register into the ABC Cars portal by filling
+                                in the required information. I use Spring Boot technology to manage the registration
+                                process and securely store user data in a database. In addition to implementing Spring
+                                Security, I can control access to private pages and admin dashboards, so that only
+                                authenticated and authorized users can access them.
+                            </p>
+                            <p>
+                                I also made sure that the pages on the site are designed with an intuitive and
+                                user-friendly interface. Users can easily interact with the ABC Cars portal, conduct
+                                used car searches, register, and view car information smoothly and conveniently. In this
+                                project, I focused on developing efficient applications and utilizing the latest
+                                technology to create a superior user experience. With a combination of Spring Tool
+                                Suite, Spring Boot, and Bootstrap, I set out to create an efficient, and secure, ABC
+                                Cars portal site.
                             </p>
                         </div>
                     </div>
