--- a/portfolio-details/details5.html
+++ b/portfolio-details/details5.html
@@ -101,7 +101,10 @@
                             <ul>
                                 <li><strong>Category</strong>: Website</li>
                                 <li><strong>Project date</strong>: 5 June, 2023</li>
-                                <li><strong>Source Code</strong>: <a href="https://github.com/fauraalyriana/KnowYourNeighborhood">Know Your Neighborhood</a></li>
+                                <li><strong>Source Code</strong>: <a
+                                        href="https://github.com/fauraalyriana/KnowYourNeighborhood">Know Your
+                                        Neighborhood</a></li>
+                                <!-- <li><strong>Project Demo</strong>: <a href="">View demo</a></li> -->
                             </ul>
                         </div>
                         <div class="portfolio-description">
@@ -110,6 +113,23 @@
                                 Know your neighborhood is a website that allows users to log in using existing APIs and
                                 the system will
                                 retrieve basic information such as email names from the API. </p>
+                            <p>
+                                In creating the "Know Your Neighborhood" website, I chose Visual Studio Code as the main
+                                code editor tool to develop the entire project. To develop the backend, I use Spring
+                                Tool Suite (STS) as the right choice. Then, to access the API and retrieve basic
+                                information such as name and email from the user, I use Postman. With Postman, I can
+                                make HTTP requests to existing APIs and see the results, thus ensuring the connection
+                                and integration with the API is working properly. Also, in front end development, I use
+                                React.js as an option for creating user interfaces. Using React.js, I was able to create
+                                reusable UI components, making frontend development and maintenance easier.
+                            </p>
+                            <p>
+                                The "Know Your Neighborhood" project is a collaboration that combines advanced
+                                technologies to produce a functional and user-friendly website. Visual Studio Code,
+                                Spring Tool Suite, and Postman were instrumental in solid backend development and access
+                                to reliable APIs, while React.js was used to create attractive and interactive user
+                                interfaces.
+                            </p>
                         </div>
                     </div>
 
