--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/M1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>ABC LEARNING CENTER</h4>
+                <h4>ABC Learning Center</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio-detail/MD1.png" data-gallery="portfolioGallery"
