--- a/portfolio-details/details2.html
+++ b/portfolio-details/details2.html
@@ -2,149 +2,165 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Faura Alyriana Shakira</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+  <title>Faura Alyriana Shakira</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-        rel="stylesheet">
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
-    <!-- Vendor CSS Files -->
-    <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <!-- Vendor CSS Files -->
+  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-    <!-- Template Main CSS File -->
-    <link href="../assets/css/style.css" rel="stylesheet">
+  <!-- Template Main CSS File -->
+  <link href="../assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
 
-    <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top">
-        <div class="container-fluid d-flex justify-content-between align-items-center">
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
 
-            <h1 class="logo me-auto me-lg-0"><a href="index.html">Faura Alyriana</a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">Faura Alyriana</a></h1>
 
-            <nav id="navbar" class="navbar order-last order-lg-0">
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../about.html">About</a></li>
-                    <li><a href="../portfolio.html">Portfolio</a></li>
-                    <li><a href="../contact.html">Contact</a></li>
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav><!-- .navbar -->
+      <nav id="navbar" class="navbar order-last order-lg-0">
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../about.html">About</a></li>
+          <li><a href="../portfolio.html">Portfolio</a></li>
+          <li><a href="../contact.html">Contact</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
 
-            <div class="header-social-links">
-                <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/faura-alyriana-shakira-021b97250/" class="linkedin"><i
-                        class="bi bi-linkedin"></i></i></a>
-            </div>
+      <div class="header-social-links">
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/faura-alyriana-shakira-021b97250/" class="linkedin"><i
+            class="bi bi-linkedin"></i></i></a>
+      </div>
 
-        </div>
+    </div>
 
-    </header><!-- End Header -->
+  </header><!-- End Header -->
 
-    <main id="main">
+  <main id="main">
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
-        <div class="container">
-  
-          <div class="row gy-4">
-  
-            <div class="col-lg-8">
-              <div class="portfolio-details-slider swiper">
-                <div class="swiper-wrapper align-items-center">
-  
-                  <div class="swiper-slide px-3">
-                    <img src="../assets/img/portfolio-detail/M2D1.png" alt="Page 1">
-                  </div>
-  
-                  <div class="swiper-slide px-3">
-                    <img src="../assets/img/portfolio-detail/M2D2.png" alt="page 2">
-                  </div>
-  
-                  <div class="swiper-slide px-3">
-                    <img src="../assets/img/portfolio-detail/M2D3.png" alt="page 3">
-                  </div>
-  
-                  <div class="swiper-slide px-3">
-                    <img src="../assets/img/portfolio-detail/M2D4.png" alt="page 4">
-                  </div>
-  
-                  <div class="swiper-slide px-3">
-                    <img src="../assets/img/portfolio-detail/M2D5.png" alt="page 5">
-                  </div>
-  
-                  <div class="swiper-slide px-3">
-                    <img src="../assets/img/portfolio-detail/M2D6.png" alt="page 6">
-                  </div>
-  
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide px-3">
+                  <img src="../assets/img/portfolio-detail/M2D1.png" alt="Page 1">
                 </div>
-                <div class="swiper-pagination"></div>
+
+                <div class="swiper-slide px-3">
+                  <img src="../assets/img/portfolio-detail/M2D2.png" alt="page 2">
+                </div>
+
+                <div class="swiper-slide px-3">
+                  <img src="../assets/img/portfolio-detail/M2D3.png" alt="page 3">
+                </div>
+
+                <div class="swiper-slide px-3">
+                  <img src="../assets/img/portfolio-detail/M2D4.png" alt="page 4">
+                </div>
+
+                <div class="swiper-slide px-3">
+                  <img src="../assets/img/portfolio-detail/M2D5.png" alt="page 5">
+                </div>
+
+                <div class="swiper-slide px-3">
+                  <img src="../assets/img/portfolio-detail/M2D6.png" alt="page 6">
+                </div>
+
               </div>
+              <div class="swiper-pagination"></div>
             </div>
-  
-            <div class="col-lg-4">
-              <div class="portfolio-info">
-                <h3>Project information</h3>
-                <ul>
-                  <li><strong>Category</strong>: Prototype</li>
-                  <li><strong>Project date</strong>: 20 December, 2022</li>
-                  <li><strong>Source Code</strong>: <a href="https://github.com/fauraalyriana/ABCJobs-prototype">ABC Jobs Prototype</a></li>
-                </ul>
-              </div>
-              <div class="portfolio-description">
-                <h2>ABC Jobs</h2>
-                <p>
-                  ABC Jobs is a web site for community portals similar to LinkedIn. In this project, I created a
-                  prototype using axure. This portal allows users to register, login, update profiles, reset passwords,
-                  search other users and view other users' profiles. </p>
-              </div>
-            </div>
-  
           </div>
-  
-        </div>
-      </section><!-- End Portfolio Details Section -->
 
-    </main><!-- End #main -->
-    <!-- ======= Footer ======= -->
-    <footer id="footer">
-        <div class="container">
-            <div class="copyright">
-                &copy; Copyright <strong><span>Faura Alyriana Shakira</span></strong>. All Rights Reserved
+          <div class="col-lg-4">
+            <div class="portfolio-info">
+              <h3>Project information</h3>
+              <ul>
+                <li><strong>Category</strong>: Prototype</li>
+                <li><strong>Project date</strong>: 20 December, 2022</li>
+                <li><strong>Source Code</strong>: <a href="https://github.com/fauraalyriana/ABCJobs-prototype">ABC Jobs
+                    Prototype</a></li>
+                <!-- <li><strong>Project Demo</strong>: <a href="">View demo</a></li> -->
+              </ul>
             </div>
+            <div class="portfolio-description">
+              <h2>ABC Jobs</h2>
+              <p>
+                ABC Jobs is a website for a community portal similar to LinkedIn. The portal allows users to register,
+                login, update profiles, reset passwords, search for other users and view other users' profiles.
+              </p>
+              <p>
+                In this project, I used Axure to create the ABC Jobs prototype. First of all, I designed the page layout
+                with an intuitive and attractive appearance so that users can easily interact with the site. The
+                validation feature that I implemented on the registration form ensures that the data entered by the user
+                is in the correct format before being saved into the system. I also use interactions in Axure to allow
+                users to get clear and helpful feedback when performing certain actions, such as filling out forms or
+                making adjustments to profiles.
+              </p>
+              <p>
+                The prototype also includes interactive elements that provide an experience similar to an actual
+                website. Users can feel how the process of registration, login, profile updates, and browsing other
+                users' profiles will take place in real time. With an attractive and interactive design, I hope that
+                this prototype can help in further development and testing before complete development.
+              </p>
+            </div>
+          </div>
+
         </div>
-    </footer>
-    <!-- End  Footer -->
 
-    <div id="preloader"></div>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-            class="bi bi-arrow-up-short"></i></a>
+      </div>
+    </section><!-- End Portfolio Details Section -->
 
-    <!-- Vendor JS Files -->
-    <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="../assets/vendor/aos/aos.js"></script>
-    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="../assets/vendor/php-email-form/validate.js"></script>
+  </main><!-- End #main -->
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>Faura Alyriana Shakira</span></strong>. All Rights Reserved
+      </div>
+    </div>
+  </footer>
+  <!-- End  Footer -->
 
-    <!-- Template Main JS File -->
-    <script src="../assets/js/main.js"></script>
+  <div id="preloader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../assets/vendor/aos/aos.js"></script>
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="../assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="../assets/js/main.js"></script>
 
 </body>
 
