--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
               experience. I'm excited to see how design can impact the way people interact with technology, and I'm
               constantly striving to become a better expert at delivering innovative and compelling designs.
             </p>
-            <a href="https://youtu.be/Qw3s7-ktNVc" class="btn-resume">Video Introduction</a>
+            <a href="https://youtu.be/EPxWl44z7YA" class="btn-resume">Video Introduction</a>
 
           </div>
         </div>
