--- a/about.html
+++ b/about.html
@@ -92,8 +92,8 @@
               </div>
             </div>
             <p>
-              Welcome to the 'About Me' page! My name is Faura Alyriana Shakira, usually called Faura or Rara. I am a
-            beginner software engineer. I have a great interest in UI/UX design and front-end development. In every project, I enjoy the process
+              Welcome to the 'About Me' page! My name is Faura Alyriana Shakira, usually called Faura or Rara. I am a software engineer. 
+              I have a great interest in UI/UX design and front-end development. In every project, I enjoy the process
               of creating designs that are aesthetically pleasing and functional, and bring users a pleasant and easy
               experience. I'm excited to see how design can impact the way people interact with technology, and I'm
               constantly striving to become a better expert at delivering innovative and compelling designs.
