--- a/contact.html
+++ b/contact.html
@@ -73,31 +73,36 @@
           </div>
 
           <div class="row mt-5">
-            <div class="col-lg-4">
-              <div class="info">
-                <div class="address">
-                  <i class="bi bi-geo-alt"></i>
-                  <h4>Location:</h4>
-                  <p>Jl. Melong Kaler No.12, Cikawao, Kec.Lengkong, Bandung, West Java, Indonesia</p>
+            <div class="info">
+              <div class="row">
+                <div class="col-4 mt-4">
+                  <div class="address">
+                    <i class="bi bi-geo-alt"></i>
+                    <h4>Location:</h4>
+                    <p>Jl. Melong Kaler No.12, Cikawao, Kec.Lengkong, Bandung, West Java, Indonesia</p>
+                  </div>
                 </div>
-
-                <div class="email">
-                  <i class="bi bi-envelope"></i>
-                  <h4>Email:</h4>
-                  <p>Fauraalyrianas@gmail.com</p>
+                <div class="col-4">
+                  <div class="email">
+                    <i class="bi bi-envelope"></i>
+                    <h4>Email:</h4>
+                    <p>Fauraalyrianas@gmail.com</p>
+                  </div>
                 </div>
-
-                <div class="phone">
-                  <i class="bi bi-phone"></i>
-                  <h4>Call:</h4>
-                  <p>+6287837659605</p>
+                <div class="col-4">
+                  <div class="phone">
+                    <i class="bi bi-phone"></i>
+                    <h4>Call:</h4>
+                    <p>+6287837659605</p>
+                  </div>
                 </div>
-
               </div>
-
             </div>
+            </div>
+          </div>
+          
 
-            <div class="col-lg-8 mt-5 mt-lg-0">
+            <!-- <div class="col-lg-8 mt-5 mt-lg-0">
 
               <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                 <div class="row">
@@ -122,9 +127,7 @@
                 <div class="text-center"><button type="submit">Send Message</button></div>
               </form>
 
-            </div>
-
-          </div>
+            </div> -->
 
         </div>
       </section><!-- End Contact Section -->
