--- a/about.html
+++ b/about.html
@@ -258,15 +258,25 @@
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="row justify-content-center">
           <div class="col-sm-2 mb-3">
             <div class="card">
               <div class="card-body text-center">
                 <h5 class="card-title text-dark">React</h5>
                 <a href="https://react.dev/">
                   <img src="./assets/img/skills/react.png" alt="React" width="80%">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-sm-2 mb-3">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title text-dark">Postman</h5>
+                <a href="https://www.postman.com/">
+                  <img src="./assets/img/skills/postman.jpg" alt="React" width="50%">
                 </a>
               </div>
             </div>
@@ -297,6 +307,16 @@
                 <h5 class="card-title text-dark">VS Code</h5>
                 <a href="https://code.visualstudio.com/">
                   <img src="./assets/img/skills/vsc.jpg" alt="VS Code" width="50%">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-2 mb-3">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title text-dark">MySQL</h5>
+                <a href="https://www.mysql.com/products/workbench/">
+                  <img src="./assets/img/skills/MySQL.jpeg" alt="VS Code" width="49%">
                 </a>
               </div>
             </div>
